fixed audio post bg, bottom tab, and hopefully title illustration on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ img {
     text-align: center;
     margin-top: 0px;
     height: 100vh;
-    z-index: -500;
+    z-index: -200;
 }
 
 .bg {
@@ -168,10 +168,8 @@ img {
     left: 0;
     width: 100vw;
     height: 120vh;
-    /* height: 200vh; */
     background-image: url('../img/titlebg.png');
-    background-size: auto 105%;
-    background-repeat: no-repeat;
+    background-size: auto 120vh;
     background-position-x: center;
     z-index: -500;
     overflow: visible;
@@ -188,10 +186,10 @@ img {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: -1px;
+    z-index: 100;
 }
 
 .nav a {
-    color: inherit;
     text-decoration: inherit;
 }
 
@@ -222,7 +220,7 @@ img {
     color: var(--color-one);
 }
 
-.navBlock h2:hover {
+/* .navBlock h2:hover {
     color: var(--color-five);
     cursor: pointer;
 }
@@ -230,7 +228,7 @@ img {
 .navBlock h2:active {
     color: var(--color-seven);
     cursor: pointer;
-}
+} */
 
 .mainColumn {
     display: block;
@@ -247,7 +245,7 @@ img {
     background-color: var(--color-three);
     border-radius: 50px;
     border: 10px dotted var(--color-two);
-    z-index: 0;
+    z-index: 100;
 }
 
 .archive {
@@ -428,7 +426,6 @@ img {
     margin-top: 40px;
     margin-bottom: 40px;
     padding: 20px;
-    background-color: ;
     border-radius: 10px;
 }
 
@@ -456,7 +453,7 @@ img {
     height: 50px;
     margin-left: auto;
     margin-right: auto;
-    z-index: 0;
+    z-index: 100;
     text-align: center;
 }
 
@@ -571,6 +568,18 @@ img {
         z-index: -1;
     }
 
+    .audioBlock .blockDate::after {
+        content: '';
+        display: inline-block;
+        position: absolute;
+        background-size: 375px;
+        width: 375px;
+        height: 250px;
+        margin-left: -57px;
+        margin-top: -100px;
+        z-index: -1;
+    }
+
     .textBlock .blockDate::after {
         content: '';
         display: inline-block;
@@ -609,7 +618,21 @@ img {
         margin-top: -20px;
     }
 
+    .bottom-tab {
+        height: 35px;
+    }
+
+    h2#footer {
+        font-size: 1em;
+    }
+
     .text-shadow {
         text-shadow: -4px -1.5px 0px var(--color-two);
+    }
+}
+
+@media only screen and (max-width: 400px){
+    .textBlock .blockContent {
+        width: 170px;
     }
 }
